Build card component.

--- a/index.html
+++ b/index.html
@@ -15,5 +15,14 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <!-- using this inline style wrapper just to how it'd look on production -->
+    <div style="width: 50%; padding: 4rem">
+      <div class="card card--secondary">
+        <header class="card__header">Cart Title</header>
+        <div class="card__body">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo impedit corrupti voluptatum temporibus laudantium fugiat sed quis nam. Non, aliquid!
+        </div>
+      </div>
+    </div>
   </body>
 </html>
