Build quotes component.

--- a/index.html
+++ b/index.html
@@ -15,16 +15,21 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="media">
-      <div class="media__image">
-        <svg class="icon icon--secondary">
-          <use xlink:href="images/sprite.svg#snap"></use>
-        </svg>
+    <blockquote class="quote">
+      <p class="quote__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero amet numquam omnis nam voluptas blanditiis velit quasi ad corporis dolorum? </p>
+      <footer>
+        <div class="media">
+          <div class="media__image">
+            <svg class="icon icon--secondary">
+              <use xlink:href="images/sprite.svg#line"></use>
+            </svg>
+          </div>
+          <div class="media__body">
+            <h3 class="media__title quote__author">Johne Lumeo</h3>
+            <p class="quote__organization">Mosh Company CEO</p>
+          </div>
       </div>
-      <div class="media__body">
-        <h3 class="media__title">Easy Start & Managed Updates</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum doloremque et pariatur eum qui distinctio. Eligendi quibusdam eius eaque tempore.</p>
-      </div>
-    </div>
+      </footer>
+    </blockquote>
   </body>
 </html>
