--- a/index.html
+++ b/index.html
@@ -14,34 +14,17 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body style="padding: 5rem;">
-    <div class="card testimonial">
+  <body style="padding: 3rem;">
+    <div class="callout callout--primary">
       <div class="grid grid--1x2">
-        <div class="testimonial__image">
-          <img src="images/testimonial.jpg" alt="A happy, smiling customer">
-          <span class="icon-container icon-container--accent">
-            <svg class="icon icon--white icon--small">
-              <use xlink:href="images/sprite.svg#quotes"></use>
-            </svg>
-          </span>
+        <div class="callout__content">
+          <h2 class="callout__heading">Ready to Get Started?</h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae consectetur nulla pariatur, fugiat architecto beatae. Quae amet facere quos asperiores.
+          </p>
         </div>
-
-        <blockquote class="quote">
-          <p class="quote__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero amet numquam omnis nam voluptas blanditiis velit quasi ad corporis dolorum? </p>
-          <footer>
-            <div class="media">
-              <div class="media__image">
-                <svg class="icon icon--secondary">
-                  <use xlink:href="images/sprite.svg#line"></use>
-                </svg>
-              </div>
-              <div class="media__body">
-                <h3 class="media__title quote__author">Johne Lumeo</h3>
-                <p class="quote__organization">Mosh Company CEO</p>
-              </div>
-            </div>
-          </footer>
-        </blockquote>
+        
+        <a href="#" class="btn btn--secondary btn--strectched">Get Started</a>
       </div>
     </div>
   </body>
