Build collapsibles component.

--- a/index.html
+++ b/index.html
@@ -14,18 +14,35 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body style="padding: 3rem;">
-    <div class="callout callout--primary">
-      <div class="grid grid--1x2">
-        <div class="callout__content">
-          <h2 class="callout__heading">Ready to Get Started?</h2>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae consectetur nulla pariatur, fugiat architecto beatae. Quae amet facere quos asperiores.
-          </p>
-        </div>
-        
-        <a href="#" class="btn btn--secondary btn--strectched">Get Started</a>
+  <body>
+    <div class="collapsible">
+      <header class="collapsible__header">
+        <h2 class="collapsible__heading">Item 1</h2>
+  
+        <svg class="icon icon--primary collapsible__menu">
+          <use xlink:href="images/sprite.svg#menu"></use>
+        </svg>        
+      </header>
+
+      <div class="collapsible__content">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, dolores.
       </div>
     </div>
+    
+    <div class="collapsible">
+      <header class="collapsible__header">
+        <h2 class="collapsible__heading">Item 1</h2>
+  
+        <svg class="icon icon--primary collapsible__menu">
+          <use xlink:href="images/sprite.svg#menu"></use>
+        </svg>        
+      </header>
+
+      <div class="collapsible__content">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, dolores.
+      </div>
+    </div>
+
+    <script src="js/main.js"></script>
   </body>
 </html>
