--- a/index.html
+++ b/index.html
@@ -15,33 +15,35 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="collapsible">
-      <header class="collapsible__header">
-        <h2 class="collapsible__heading">Item 1</h2>
-  
-        <svg class="icon icon--primary collapsible__menu">
-          <use xlink:href="images/sprite.svg#menu"></use>
-        </svg>        
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="block__heading">Heading</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, eum.</p>
       </header>
 
-      <div class="collapsible__content">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, dolores.
+      <div style="width: 50%; padding: 4rem">
+        <div class="card card--secondary">
+          <header class="card__header">Cart Title</header>
+          <div class="card__body">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo impedit corrupti voluptatum temporibus laudantium fugiat sed quis nam. Non, aliquid!
+          </div>
+        </div>
       </div>
-    </div>
-    
-    <div class="collapsible">
-      <header class="collapsible__header">
-        <h2 class="collapsible__heading">Item 1</h2>
-  
-        <svg class="icon icon--primary collapsible__menu">
-          <use xlink:href="images/sprite.svg#menu"></use>
-        </svg>        
-      </header>
+    </section>
 
-      <div class="collapsible__content">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, dolores.
+    <section class="block block--dark block--skewed-right">
+      <div class="block__header container">
+        <h2 class="block__heading">Heading</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, eum.</p>
       </div>
-    </div>
+    </section>
+
+    <section class="block block--dark block--skewed-left">
+      <div class="block__header container">
+        <h2 class="block__heading">Heading</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, eum.</p>
+      </div>
+    </section>
 
     <script src="js/main.js"></script>
   </body>
