--- a/index.html
+++ b/index.html
@@ -15,35 +15,20 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <section class="block container">
-      <header class="block__header">
-        <h2 class="block__heading">Heading</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, eum.</p>
-      </header>
+    <nav class="nav collapsible">
+      <a class="nav__brand" href="/"><img src="images/logo.svg" alt="Logo"></a>
 
-      <div style="width: 50%; padding: 4rem">
-        <div class="card card--secondary">
-          <header class="card__header">Cart Title</header>
-          <div class="card__body">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo impedit corrupti voluptatum temporibus laudantium fugiat sed quis nam. Non, aliquid!
-          </div>
-        </div>
-      </div>
-    </section>
+      <svg class="icon icon--white nav__toggler">
+        <use xlink:href="images/sprite.svg#menu"></use>
+      </svg>
 
-    <section class="block block--dark block--skewed-right">
-      <div class="block__header container">
-        <h2 class="block__heading">Heading</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, eum.</p>
-      </div>
-    </section>
-
-    <section class="block block--dark block--skewed-left">
-      <div class="block__header container">
-        <h2 class="block__heading">Heading</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, eum.</p>
-      </div>
-    </section>
+      <ul class="list nav__list collapsible__content">
+        <li class="nav__item"><a href="#">VPS</a></li>
+        <li class="nav__item"><a href="#">Hosting</a></li>
+        <li class="nav__item"><a href="#">Domain</a></li>
+        <li class="nav__item"><a href="#">Pricing</a></li>
+      </ul>
+    </nav>
 
     <script src="js/main.js"></script>
   </body>
