--- a/index.html
+++ b/index.html
@@ -15,30 +15,112 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <article class="grid grid--1x2 feature">
-      <div>
-        <span class="icon-container">
-          <svg class="icon icon--primary">
-            <use xlink:href="images/sprite.svg#easy"></use>
-          </svg>
-        </span>
-        <h3 class="feature__heading">Super Easy to Use</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea minima eveniet asperiores dolorem magni mollitia eius aut temporibus aliquam. Officiis.</p>
-        <a href="#" class="link-arrow">Learn More</a>
-      </div>
+    <section class="block container">
+      <header class="block__header">
+        <h2>Host on the Cloud to Keep Growing</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore, facilis.</p>
+      </header>
 
-      <picture>
-        <source
-          type="image/webp"
-          srcset="images/easy.webp 1x, images/easy@2x.webp 2x"
-        />
-        <source
-          type="image/jpg"
-          srcset="images/easy.jpg 1x, images/easy@2x.jpg 2x"
-        />
-        <img class="feature__image" src="images/easy@2x.jpg" alt="">
-      </picture>
-    </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprite.svg#easy"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Super Easy to Use</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea minima eveniet asperiores dolorem magni mollitia eius aut temporibus aliquam. Officiis.</p>
+          <a href="#" class="link-arrow">Learn More</a>
+        </div>
+  
+        <picture>
+          <source
+            type="image/webp"
+            srcset="images/easy.webp 1x, images/easy@2x.webp 2x"
+          />
+          <source
+            type="image/jpg"
+            srcset="images/easy.jpg 1x, images/easy@2x.jpg 2x"
+          />
+          <img class="feature__image" src="images/easy@2x.jpg" alt="">
+        </picture>
+      </article>
+
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprite.svg#computer"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Simply Fast Websites</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore alias voluptates amet odio hic error. Id aut ipsum repellendus eum.</p>
+          <a href="#" class="link-arrow">Learn More</a>
+        </div>
+  
+        <picture>
+          <source
+            type="image/webp"
+            srcset="images/fast.webp 1x, images/fast@2x.webp 2x"
+          />
+          <source
+            type="image/jpg"
+            srcset="images/fast.jpg 1x, images/fast@2x.jpg 2x"
+          />
+          <img class="feature__image" src="images/fast@2x.jpg" alt="">
+        </picture>
+      </article>
+
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprite.svg#wordpress"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Wordpress Made Easy</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore alias voluptates amet odio hic error. Id aut ipsum repellendus eum.</p>
+          <a href="#" class="link-arrow">Learn More</a>
+        </div>
+  
+        <picture>
+          <source
+            type="image/webp"
+            srcset="images/wordpress.webp 1x, images/wordpress@2x.webp 2x"
+          />
+          <source
+            type="image/jpg"
+            srcset="images/wordpress.jpg 1x, images/wordpress@2x.jpg 2x"
+          />
+          <img class="feature__image" src="images/wordpress@2x.jpg" alt="">
+        </picture>
+      </article>
+
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprite.svg#clock"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">24/7 Expert Support</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore alias voluptates amet odio hic error. Id aut ipsum repellendus eum.</p>
+          <a href="#" class="link-arrow">Learn More</a>
+        </div>
+  
+        <picture>
+          <source
+            type="image/webp"
+            srcset="images/support.webp 1x, images/support@2x.webp 2x"
+          />
+          <source
+            type="image/jpg"
+            srcset="images/support.jpg 1x, images/support@2x.jpg 2x"
+          />
+          <img class="feature__image" src="images/support@2x.jpg" alt="">
+        </picture>
+      </article>
+    </section>
 
     <script src="js/main.js"></script>
   </body>
