--- a/index.html
+++ b/index.html
@@ -433,13 +433,13 @@
     <footer class="block block--dark footer">
       <div class="container grid footer__sections">
         <section class="collapsible collapsible--expanded footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Products</h2>
 
             <svg class="icon icon--primary collapsible__menu">
               <use xlink:href="images/sprite.svg#tick"></use>
             </svg>
-          </header>
+          </div>
 
           <div class="collapsible__content">
             <ul class="list">
@@ -451,13 +451,13 @@
         </section>
 
         <section class="collapsible footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Company</h2>
 
             <svg class="icon icon--primary collapsible__menu">
               <use xlink:href="images/sprite.svg#tick"></use>
             </svg>
-          </header>
+          </div>
 
           <div class="collapsible__content">
             <ul class="list">
@@ -469,13 +469,13 @@
         </section>
 
         <section class="collapsible footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Support</h2>
 
             <svg class="icon icon--primary collapsible__menu">
               <use xlink:href="images/sprite.svg#tick"></use>
             </svg>
-          </header>
+          </div>
 
           <div class="collapsible__content">
             <ul class="list">
@@ -487,13 +487,13 @@
         </section>
 
         <section class="collapsible footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Domains</h2>
 
             <svg class="icon icon--primary collapsible__menu">
               <use xlink:href="images/sprite.svg#tick"></use>
             </svg>
-          </header>
+          </div>
 
           <div class="collapsible__content">
             <ul class="list">
@@ -504,10 +504,10 @@
           </div>
         </section>
 
-        <section class="footer__brand">
+        <div class="footer__brand">
           <img src="images/logo.svg" alt="" />
           <p class="footer__copyright">Copyright 2020 Mosh Hamedani</p>
-        </section>
+        </div>
       </div>
     </footer>
 
