--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=optional"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
@@ -29,12 +28,12 @@
     <header>
       <!-- Navigation Bar -->
       <nav class="nav collapsible">
-        <a class="nav__brand" href="/"
+        <a aria-label="Moshify" class="nav__brand" href="/"
           ><img src="images/logo.svg" alt="Logo"
         /></a>
 
         <svg class="icon icon--white nav__toggler">
-          <use xlink:href="images/sprite.svg#menu"></use>
+          <use href="images/sprite.svg#menu"></use>
         </svg>
 
         <ul class="list nav__list collapsible__content">
@@ -84,14 +83,16 @@
       </header>
 
       <div class="input-group">
+        <!-- accesible rich internet application -->
         <input
+          aria-label="Domain"
           type="text"
           class="input"
           placeholder="Enter domain name here..."
         />
         <button class="btn btn--accent">
           <svg class="icon icon--white">
-            <use xlink:href="images/sprite.svg#search"></use>
+            <use href="images/sprite.svg#search"></use>
           </svg>
           Search
         </button>
@@ -192,7 +193,7 @@
         <div class="feature__content" data-aos="fade-right">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="images/sprite.svg#easy"></use>
+              <use href="images/sprite.svg#easy"></use>
             </svg>
           </span>
           <h3 class="feature__heading">Super Easy to Use</h3>
@@ -221,7 +222,7 @@
         <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="images/sprite.svg#computer"></use>
+              <use href="images/sprite.svg#computer"></use>
             </svg>
           </span>
           <h3 class="feature__heading">Simply Fast Websites</h3>
@@ -249,7 +250,7 @@
         <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="images/sprite.svg#wordpress"></use>
+              <use href="images/sprite.svg#wordpress"></use>
             </svg>
           </span>
           <h3 class="feature__heading">Wordpress Made Easy</h3>
@@ -277,7 +278,7 @@
         <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="images/sprite.svg#clock"></use>
+              <use href="images/sprite.svg#clock"></use>
             </svg>
           </span>
           <h3 class="feature__heading">24/7 Expert Support</h3>
@@ -326,7 +327,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#tick"></use>
+                  <use href="images/sprite.svg#tick"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -344,7 +345,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#growth"></use>
+                  <use href="images/sprite.svg#growth"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -362,7 +363,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#wordpress"></use>
+                  <use href="images/sprite.svg#wordpress"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -399,7 +400,7 @@
               />
               <span class="icon-container icon-container--accent">
                 <svg class="icon icon--white icon--small">
-                  <use xlink:href="images/sprite.svg#quotes"></use>
+                  <use href="images/sprite.svg#quotes"></use>
                 </svg>
               </span>
             </div>
@@ -414,7 +415,7 @@
                 <div class="media">
                   <div class="media__image">
                     <svg class="icon icon--secondary">
-                      <use xlink:href="images/sprite.svg#line"></use>
+                      <use href="images/sprite.svg#line"></use>
                     </svg>
                   </div>
                   <div class="media__body">
@@ -437,7 +438,7 @@
             <h2 class="collapsible__heading footer__heading">Products</h2>
 
             <svg class="icon icon--primary collapsible__menu">
-              <use xlink:href="images/sprite.svg#tick"></use>
+              <use href="images/sprite.svg#tick"></use>
             </svg>
           </div>
 
@@ -455,7 +456,7 @@
             <h2 class="collapsible__heading footer__heading">Company</h2>
 
             <svg class="icon icon--primary collapsible__menu">
-              <use xlink:href="images/sprite.svg#tick"></use>
+              <use href="images/sprite.svg#tick"></use>
             </svg>
           </div>
 
@@ -473,7 +474,7 @@
             <h2 class="collapsible__heading footer__heading">Support</h2>
 
             <svg class="icon icon--primary collapsible__menu">
-              <use xlink:href="images/sprite.svg#tick"></use>
+              <use href="images/sprite.svg#tick"></use>
             </svg>
           </div>
 
@@ -491,7 +492,7 @@
             <h2 class="collapsible__heading footer__heading">Domains</h2>
 
             <svg class="icon icon--primary collapsible__menu">
-              <use xlink:href="images/sprite.svg#tick"></use>
+              <use href="images/sprite.svg#tick"></use>
             </svg>
           </div>
 
